# edgetx

./: .gitignore  CMakeLists.txt
.github/workflows/: actions.yml  build_fw.yml  macosx_cpn.yml  nightly.yml  win_cpn-64.yml
cmake/toolchain/: arm-none-eabi.cmake
companion/src/: CMakeLists.txt
companion/src/translations/: companion_cs.ts  companion_da.ts  companion_de.ts  companion_en.ts  companion_es.ts  companion_fi.ts  companion_fr.ts  companion_he.ts  companion_it.ts  companion_ja.ts  companion_nl.ts  companion_pl.ts  companion_pt.ts  companion_ru.ts  companion_zh_CN.ts  companion_zh_TW.ts
radio/src/: CMakeLists.txt  FreeRTOSConfig.h  buzzer.h  datastructs.h  debug.cpp  debug.h  definitions.h  edgetx.cpp  mixer.cpp  tasks.cpp  tasks.h
radio/src/boards/generic_stm32/: bor_level.cpp
radio/src/boards/generic_stm32/linker/: bootloader.ld  common_sections.ld  firmware.ld
radio/src/boards/generic_stm32/linker/stm32h753/: extra_sections.ld  layout.ld
radio/src/boards/generic_stm32/linker/stm32h753/bootloader/: layout.ld
radio/src/bootloader/: boot.cpp
radio/src/gui/128x64/: lcd.cpp  model_setup.cpp
radio/src/hal/: adc_driver.cpp
radio/src/pulses/: pulses.cpp
radio/src/storage/: sdcard_common.cpp  storage.h
radio/src/storage/yaml/: CMakeLists.txt  yaml_datastructs.cpp
radio/src/targets/common/arm/: CMakeLists.txt
radio/src/targets/common/arm/stm32/: abnormal_reboot.cpp  diskio_sdio.cpp  flash_driver.cpp  stm32_dma.cpp  stm32_dma.h  stm32_usart_driver.cpp  stm32h7xx_hal_conf.h  system_init.c  timers_driver.cpp  usb_driver.cpp  usbd_conf.c
radio/src/targets/common/arm/stm32/bootloader/: bin_files.h  boot.cpp
radio/src/targets/common/arm/stm32/h7/: CMakeLists.txt  system_stm32h7xx.c  vectors_stm32h753xx.c
radio/src/targets/modalai/: CMakeLists.txt  backlight_driver.cpp  board.cpp  board.h  hal.h  hal.h.old  lcd_driver_spi.cpp  system_clock.c  system_clock.cpp  system_init.cpp  usb_descriptor.h  voxlpm_i2c_driver.cpp  voxlpm_i2c_driver.h
radio/src/targets/modalai/bootloader/: boot_menu.cpp
radio/src/targets/taranis/: CMakeLists.txt  hal.h
radio/src/translations/: translation.py
radio/util/: addtr.py  bin2lbm.py  build-firmware.py  capitalize.py  crossfire-parse.py  encode-bitmap.py  fat12.py  font2png.py  fwoptions.py  lua_trace2plot.py  parse.py  sport-parse.py  taranisicons.py
radio/util/hw_defs/: legacy_names.py  switch_config.py
tools/: add-issue-links.py  build-font-bitmap.py  build-frsk.py  charset.py  copyright.py  encode-font.py  encode-translation.py  include-guard.py
